# toilet-radar

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  env.example  package-lock.json  package.json  pyproject.toml  supabase.md
app/: globals.css  layout.tsx  page.tsx
components/: ClientMapWrapper.tsx  ToiletMap.tsx  theme-switcher.tsx
components/map-controls/: LocationSearchControl.tsx  MapControlWrapper.tsx  RecenterControl.tsx  index.ts  types.ts
db/: __init__.py  config.py  engine.py  services.py
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 2025_06_22_1503-839328d06171_added_datamodels_routing_table_fix.py  2025_06_29_1039-edef31fb729f_create_toilet_functions.py  2025_06_29_1715-0e002d492d08_fix_duplicate_functions_and_improve_v3.py  2025_06_29_1731-e3a2cb33db43_populate_geometry_from_coordinates.py
db/models/: __init__.py  toilets.py
db/sql/: functions.sql
geo/: TOILETTE_lucerne.json  VDG_WC_PUBLIC.csv  geojson.json  wc_basel.json
lib/: utils.ts
lib/managers/: ui-layout.ts
lib/services/: geocoding.ts  geolocation.ts
scripts/: enrichAddresses.mjs  importBaselToilets.mjs  importGenevaToilets.mjs  importLucerneToilets.mjs  populateFromOSM.mjs  populateToilets.mjs
