[project]
name = "toilet-radar"
version = "0.1.0"
description = "Toilet Radar - Find nearby public toilets in Switzerland"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "geoalchemy2>=0.14.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.alembic]
script_location = "db/migrations"
prepend_sys_path = ["."]
version_path_separator = "os"

[project.scripts]
db-migrate = "db.cli:migrate"
db-upgrade = "db.cli:upgrade"
db-downgrade = "db.cli:downgrade"
db-revision = "db.cli:revision"
db-functions = "db.function_manager:main"
db-import = "db.data_import:main"
